<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_openRoms"
        android:icon="@drawable/ic_folder"
        android:title="@string/open_roms"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_compress"
        android:icon="@drawable/ic_compress"
        android:title="@string/convert"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_refresh"
        app:showAsAction="never"
        android:title="@string/menu_refresh"/>

</menu>