<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbCompressionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compression_level"
        app:layout_constraintBottom_toBottomOf="@+id/spCompressionLevel"
        app:layout_constraintEnd_toStartOf="@+id/spCompressionLevel"
        app:layout_constraintStart_toStartOf="@+id/swDeleteAfter"
        app:layout_constraintTop_toTopOf="@+id/spCompressionLevel" />

    <Spinner
        android:id="@+id/spCompressionLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/compression_levels"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbCompressionLevel"
        app:layout_constraintTop_toBottomOf="@+id/swDeleteAfter" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swDeleteAfter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delete_after_general"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/spSimultaneousTasks" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simultaneous_tasks"
        app:layout_constraintBottom_toBottomOf="@+id/spSimultaneousTasks"
        app:layout_constraintEnd_toStartOf="@+id/spSimultaneousTasks"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/spSimultaneousTasks" />

    <Spinner
        android:id="@+id/spSimultaneousTasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>