<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/lbOutputFilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_filename"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOutputFilename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/output_filename"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        app:layout_constraintEnd_toStartOf="@+id/txtOutExtension"
        app:layout_constraintStart_toStartOf="@+id/lbOutputFilename"
        app:layout_constraintTop_toBottomOf="@+id/lbOutputFilename"
        tools:ignore="TextContrastCheck"
        tools:text="MotorStorm - Arctic Edge (USA) (En,Fr,De,Es,It,Nl,Pt,Ru)" />

    <TextView
        android:id="@+id/txtOutExtension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="48dp"
        tools:text=".cso"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/txtOutputFilename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtOutputFilename"
        app:layout_constraintTop_toTopOf="@+id/txtOutputFilename" />

    <TextView
        android:id="@+id/lbCompressionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/compression_level"
        app:layout_constraintBottom_toBottomOf="@+id/spCompressionLevel"
        app:layout_constraintEnd_toStartOf="@+id/spCompressionLevel"
        app:layout_constraintStart_toStartOf="@+id/swDeleteAfter"
        app:layout_constraintTop_toTopOf="@+id/spCompressionLevel" />

    <Spinner
        android:id="@+id/spCompressionLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/compression_levels"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbCompressionLevel"
        app:layout_constraintTop_toBottomOf="@+id/swDeleteAfter" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swDeleteAfter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delete_after_single"
        app:layout_constraintStart_toStartOf="@+id/txtOutputFilename"
        app:layout_constraintTop_toBottomOf="@+id/txtOutputFilename" />
</androidx.constraintlayout.widget.ConstraintLayout>